# nanoinfer

./: .gitignore  HINTS.md  README.md  conftest.py  pyproject.toml  train.py
src/nanoinfer/: __init__.py  batching.py  config.py  flash.py  generate.py  kv_cache.py  model.py  quant.py  rope.py  speculative.py
tests/: test_attention.py  test_batching.py  test_flash.py  test_generate.py  test_kv_cache.py  test_model.py  test_quant.py  test_rope.py  test_speculative.py
