[project]
name = "nanoinfer"
version = "0.1.0"
description = "LLM inference/serving, implemented from scratch — an interview-prep exercise set"
requires-python = ">=3.10"
dependencies = ["torch", "numpy"]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "gpu: requires a CUDA device",
    "perf: performance/benchmark test (not pure correctness)",
]
